# RuntimeCompiledCPlusPlus

Aurora/: CMakeLists.txt
Aurora/Examples/ConsoleExample/: ConsoleGame.cpp  RuntimeObject01.cpp
Aurora/RuntimeObjectSystem/: IObjectFactorySystem.h
Aurora/RuntimeObjectSystem/ObjectFactorySystem/: ObjectFactorySystem.cpp  ObjectFactorySystem.h
